# city-rollup

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dtl  rpc_bash.sh
city_cli/: Cargo.toml
city_cli/src/: main.rs  subcommand.rs
city_cli/src/subcommand/: indexer.rs  sequencer.rs
city_common/: Cargo.toml
city_common/src/: lib.rs  tree_planner.rs  units.rs
city_common/src/binaryhelpers/: bytes.rs
city_common/src/bls12_381/: fr.rs  mod.rs  plonky2_config.rs
city_common/src/cli/: args.rs  dev_args.rs  message.rs  mod.rs  modes.rs  user_args.rs
city_common/src/config/: mod.rs  rollup_constants.rs
city_common/src/data/: kv.rs  mod.rs  u8bytes.rs  varuint.rs
city_common/src/futures/: mod.rs
city_common/src/logging/: debug_timer.rs  mod.rs  trace_timer.rs
city_common_circuit/: Cargo.toml
city_common_circuit/src/: dummy.rs  lib.rs  traits.rs  vector_builder.rs
city_common_circuit/src/builder/: comparison.rs  connect.rs  core.rs  mod.rs  optional_inputs.rs  pad_circuit.rs  select.rs  verify.rs
city_common_circuit/src/circuits/: mod.rs
city_common_circuit/src/debug/: circuit_tracer.rs
city_common_circuit/src/field/: cubic.rs
city_common_circuit/src/hash/: hash_ops.rs  mod.rs
city_common_circuit/src/proof_minifier/: mod.rs  pm_chain.rs  pm_chain_dynamic.rs  pm_core.rs  pm_custom.rs  pm_dynamic.rs
city_common_circuit/src/treeprover/: data.rs  mod.rs  prover.rs  traits.rs  wrapper.rs
city_common_circuit/src/verify_template/: circuit_template.rs  mod.rs  ser_data.rs  verify_template_builder.rs
city_common_circuit/src/wallet/: mod.rs  zk.rs
city_crypto/: Cargo.toml
city_crypto/src/: lib.rs
city_crypto/src/field/: mod.rs  qfield.rs  serialized_2d_felt_bls12381.rs
city_crypto/src/hash/: cached_zero_hashes.rs  mod.rs  qhashout.rs
city_mono/: Cargo.toml  LICENSE  README.md
city_mono/examples/: btc_api.rs  merkle_demo.rs  secp256k1_signature.rs  simple_rollup_2.rs  simple_rollup_3.rs  simple_rollup_spend_hints_0.json  simple_rollup_spend_info_0.json  tree_test.rs
city_mono/shaders/: poseidon_merkle_hasher.metallib
city_mono/src/: lib.rs  main.rs
city_mono/src/btc/: mod.rs
city_mono/src/cityrollup/: mod.rs
city_mono/src/common/: field_traits.rs  generic.rs  mod.rs  qhashout.rs  tree_planner.rs  vector_builder.rs
city_mono/src/debug/: circuit_tracer.rs  mod.rs
city_mono/src/hwa/: fallback.rs  mod.rs
city_mono/src/logging/: trace_timer.rs
city_mono/src/store/: mod.rs
city_mono/src/treeprover/: mod.rs  prover.rs  traits.rs
city_redis_store/: Cargo.toml
city_redis_store/src/: lib.rs
city_rollup_circuit/: Cargo.toml
city_rollup_circuit/src/: lib.rs
city_rollup_circuit/src/block_circuits/: mod.rs
city_rollup_circuit/src/common_gates/: mod.rs
city_rollup_circuit/src/sighash_circuits/: mod.rs  sighash.rs  sighash_final_gl.rs  sighash_refund.rs  sighash_refund_final_gl.rs  sighash_root.rs  sighash_wrapper.rs
city_rollup_circuit/src/state/: block_state_transition.rs  mod.rs
city_rollup_circuit/src/user_circuits/: mod.rs
city_rollup_circuit/src/wallet/: memory.rs
city_rollup_circuit/src/worker/: bench.rs  mod.rs  prover.rs  traits.rs
city_rollup_cli/: Cargo.toml
city_rollup_cli/src/: main.rs  subcommand.rs
city_rollup_cli/src/subcommand/: apiserver.rs  dumpblock.rs  inspectdump.rs  l2transfer.rs  l2worker.rs  orchestrator.rs  qbench.rs  rpcserver.rs  worker.rs
city_rollup_common/: Cargo.toml
city_rollup_common/src/: lib.rs
city_rollup_common/src/actors/: mod.rs  requested_actions.rs  rpc_processor.rs  traits.rs
city_rollup_common/src/block_template/: config.rs  data.rs  mod.rs  template.rs  verifier_data.rs
city_rollup_common/src/config/: mod.rs  sighash_wrapper_config.rs
city_rollup_common/src/errors/: data_resolver.rs  mod.rs
city_rollup_common/src/introspection/: mod.rs  sighash.rs  size.rs  transaction.rs
city_rollup_common/src/link/: data.rs  link_api.rs  mod.rs  traits.rs  tx.rs
city_rollup_common/src/qworker/: dump.rs  fingerprints.rs  job_id.rs  mod.rs  proof_store.rs  verifier.rs
city_rollup_core_api/: Cargo.toml
city_rollup_core_api/src/: lib.rs
city_rollup_core_node/: Cargo.toml
city_rollup_core_node/public/: index.html
city_rollup_core_node/src/: handler.rs  lib.rs  rpc.rs
city_rollup_core_orchestrator/: Cargo.toml
city_rollup_core_orchestrator/src/: event_receiver.rs  lib.rs  orchestrator.rs  processor.rs  tree_helper.rs
city_rollup_core_worker/: Cargo.toml
city_rollup_core_worker/src/: event_processor.rs  lib.rs  worker.rs
city_rollup_dev_cli/: Cargo.toml
city_rollup_dev_cli/examples/: btc_link.rs  comparison_test.rs  config_permutations.rs  config_permutations_1x1.json  config_permutations_2x2.json  config_permutations_4x4.json  config_permutations_4x4b.json  config_permutations_g16_4x4.json  config_permutations_v2.rs  covenant_js_output.rs  covenant_js_output_example.json  covenant_js_output_example_1.json  covenant_js_output_example_2.json  dump_proof_store.rs  dump_proof_store_block_config.json  dump_proof_store_leaf_jobs.json  fblockredis.rs  full_block.rs  full_block_hints_0.json  full_block_hints_1.json  full_block_hints_2.json  full_block_hints_3.json  full_block_inputs.json  full_block_inputs_2.json  full_block_inputs_3.json  full_block_inputs_4.json  full_block_new.rs  full_block_redis.rs  full_block_v2.rs  hashes.rs  loop_error.rs  mtree.rs  print_constant_hashes.rs  print_hints.rs  prove_sighash_0_hints.json  prove_sighash_0_hints.rs  sign_secp256k1.rs  sucx.rs
city_rollup_dev_cli/src/: main.rs  subcommand.rs
city_rollup_rpc_provider/: Cargo.toml
city_rollup_rpc_provider/src/: lib.rs
city_rollup_user_cli/: Cargo.toml
city_rollup_user_cli/examples/: ex1.rs
city_rollup_user_cli/src/: main.rs  subcommand.rs
city_rollup_user_prover_api/: Cargo.toml
city_rollup_user_prover_api/src/: lib.rs  run.rs
city_rollup_worker_dispatch/: Cargo.toml
city_rollup_worker_dispatch/src/: lib.rs  proving_job.rs
city_store/: Cargo.toml
city_store/src/: file_lock.rs  lib.rs
city_store/src/store/: mod.rs
(+401 files in other folders)
