[workspace]
members = [
  "city_common_circuit",
  "city_common",
  "city_rollup_common",
  "city_rollup_circuit",
  "city_crypto",
  "city_store",
  "city_macros",
  "kvq",
  "kvq_store_redb",
  "city_rollup_cli",
  "city_rollup_user_cli",
  "city_rollup_dev_cli",
  "city_rollup_core_node",
  "city_rollup_core_worker",
  "city_rollup_worker_dispatch",
  "city_rollup_core_orchestrator"
, "city_redis_store"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = { version = "0.1.80" }
base64 = "0.21.0"
bigdecimal = { version = "0.4.3" }
bitcoin = { git = "https://github.com/QEDProtocol/rust-bitcoin", rev = "18f0b780b2a31e70ac914d8854f165b6ad17bddd", features = ["serde", "rand"] }
bitcoincore-rpc = "0.18.0"
bitcoincore-rpc-json = "0.18.0"
brotli = "3.4.0"
bytes = "1"
bincode = "=1.3.3"
ciborium = "0.2.1"
clap = { version = "4.4.6", features = ["derive", "env"] }
derive_more = { version = "0.99.17" }
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.6"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
k256 = { version = "0.13.2", features = [
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "precomputed-tables",
  "schnorr",
  "signature",
  "std",
  "serde",
] }
lazy_static = "1.4.0"
num-traits = "0.2.18"
num_bigint = { version = "0.4.4" }
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
rand_core = "0.6.0"
rayon = { version = "1.10.0" }
redb = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "rustls",
  "blocking",
] }
rmp-serde = "1.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4.0", features = ["hex"] }
serde_repr = "0.1.19"
sha2 = "0.10.8"
sha3 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }
tempfile = "3.10.1"
thiserror = "1.0.50"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
shadow-rs = "0.27.1"

plonky2 = { git = "https://github.com/QEDProtocol/plonky2-hwa", rev = "6a8ca008da97890b67a84f64784cfbc488b5238d" }
plonky2_maybe_rayon = { git = "https://github.com/QEDProtocol/plonky2-hwa", rev = "6a8ca008da97890b67a84f64784cfbc488b5238d", default-features = false }

num = { version = "0.4.0", default-features = false }
unroll = "0.1.5"
itertools = "0.10.5"
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }

bitflags = "2.5.0"

ripemd = "0.1.3"
starkyx = { git = "https://github.com/QEDProtocol/starkyx", rev = "a53ea1060c6256a8a26820e43fbe8d75233e8b29" }
log = { version = "0.4.14", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] } # NOTE: When upgrading, see `ahash` dependency.
url = "2.5.0"
redis = { version = "^0.25", default-features = false, features = ["acl", "keep-alive", "script",  "aio"] }
bb8-redis = { version = "^0.15" }
rsmq_async = { git = "https://github.com/QEDProtocol/rsmq-async-rs", rev = "1d61a9e665ce69f9c37752575c5b7b3566504a32", default-features = false, features = ["tokio-comp"] }
r2d2 = "0.8.8"
r2d2_redis = { git = "https://github.com/GopherJ/r2d2-redis", rev = "759effbce90d2edd7cbd6f94071b383140a8f622" }
plonky2x = { git = "https://github.com/GopherJ/succinctx.git", rev = "a7fa3f5d42f933c398587f4aea33cb7846b94797" }
ff = { package = "ff", version = "0.13", features = ["derive"] }
num-derive = "0.3.3"
gnark-plonky2-wrapper = { git = "https://github.com/cf/gnark-plonky2-verifier", branch = "feat/poseidon-bls12-381-cgo" }

[patch.'https://github.com/0xPolygonZero/plonky2.git']
plonky2 = { git = "https://github.com/QEDProtocol/plonky2-hwa", rev = "6a8ca008da97890b67a84f64784cfbc488b5238d" }

[patch.'https://github.com/succinctlabs/starkyx.git']
starkyx = { git = "https://github.com/QEDProtocol/starkyx", rev = "a53ea1060c6256a8a26820e43fbe8d75233e8b29" }

[patch.crates-io]
bitcoin = { git = "https://github.com/QEDProtocol/rust-bitcoin", rev = "18f0b780b2a31e70ac914d8854f165b6ad17bddd", features = ["serde", "rand"] }
