[workspace]
members = [
  "city_common_circuit",
  "city_common",
  "city_rollup_common",
  "city_rollup_circuit",
  "city_crypto",
  "city_store",
  "city_macros",
  "kvq",
  "kvq_store_redb",
  "kvq_store_rocksdb",
  "city_rollup_cli",
  "city_rollup_user_cli",
  "city_rollup_dev_cli",
  "city_rollup_core_node",
  "city_redis_store",
  "city_rollup_core_worker",
  "city_rollup_core_worker_qbench",
  "city_rollup_worker_dispatch",
  "city_rollup_core_orchestrator",
  "city_rollup_core_api",
  "city_rollup_rpc_provider",
  "city_rollup_user_prover_api"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = { version = "0.1.80" }
base64 = "0.21.0"
bigdecimal = { version = "0.4.3" }
bitcoin = { version = "0.31.1", features = ["serde", "rand"] }
bitcoincore-rpc = "0.18.0"
bitcoincore-rpc-json = "0.18.0"
brotli = "3.4.0"
bytes = "1"
bincode = "=1.3.3"
ciborium = "0.2.1"
clap = { version = "4.4.6", features = ["derive", "env"] }
derive_more = { version = "0.99.17" }
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
hex-literal = "0.4.1"
http = "0.2.6"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
k256 = { version = "0.13.2", features = [
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "precomputed-tables",
  "schnorr",
  "signature",
  "std",
  "serde",
] }
lazy_static = "1.4.0"
num-traits = "0.2.18"
num_bigint = { version = "0.4.4" }
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
rand_core = "0.6.0"
rayon = { version = "1.10.0" }
redb = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "rustls",
  "blocking",
] }
rmp-serde = "1.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4.0", features = ["hex"] }
serde_repr = "0.1.19"
sha2 = "0.10.8"
sha3 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
syn = { version = "1.0", features = ["full"] }
tempfile = "3.10.1"
thiserror = "1.0.50"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
shadow-rs = "0.27.1"

tower-http = { version = "0.5.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }


plonky2 = { git = "https://github.com/QEDProtocol/plonky2-hwa", rev = "6a8ca008da97890b67a84f64784cfbc488b5238d" }
plonky2_maybe_rayon = { git = "https://github.com/QEDProtocol/plonky2-hwa", rev = "6a8ca008da97890b67a84f64784cfbc488b5238d", default-features = false }

num = { version = "0.4.0", default-features = false }
unroll = "0.1.5"
itertools = "0.10.5"
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }

bitflags = "2.5.0"

ripemd = "0.1.3"
starkyx = { git = "https://github.com/QEDProtocol/starkyx", rev = "a53ea1060c6256a8a26820e43fbe8d75233e8b29" }
log = { version = "0.4.14", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] } # NOTE: When upgrading, see `ahash` dependency.
url = "2.5.0"
redis = { version = "^0.25", default-features = false, features = ["acl", "keep-alive", "script"] }
rsmq = { git = "https://github.com/GopherJ/rsmq-async-rs", rev = "2af5a5c06a0341cb60f73ba0f0af066f65fb5e77", default-features = false }
r2d2 = { git = "https://github.com/GopherJ/r2d2", rev = "976ca74a74871d78764da2a040edcadad1af9be9" }
r2d2_redis = { git = "https://github.com/GopherJ/r2d2-redis", rev = "63be37454cf441b832251aa915b1a9cb8bc27bff" }

gnark-plonky2-wrapper = { git = "https://github.com/cf/gnark-plonky2-verifier", rev = "75681e2a0e20270734f082145d13cdfe3349d009" }
bs58 = { version = "0.5.1", features = ["std", "check"] }
jsonrpsee = { version = "0.23.2", features = ["full"] }
rocksdb = { version = "0.21.0", features = ["serde", "multi-threaded-cf"] }
home = { version = "0.5.9" }

[patch.'https://github.com/0xPolygonZero/plonky2.git']
plonky2 = { git = "https://github.com/QEDProtocol/plonky2-hwa", rev = "6a8ca008da97890b67a84f64784cfbc488b5238d" }

[patch.'https://github.com/succinctlabs/starkyx.git']
starkyx = { git = "https://github.com/QEDProtocol/starkyx", rev = "a53ea1060c6256a8a26820e43fbe8d75233e8b29" }
