[package]
build   = "build.rs"
edition = "2021"
name    = "city-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow                = { workspace = true }
bitcoincore-rpc       = { workspace = true }
clap                  = { workspace = true }
dotenv                = { workspace = true }
hex                   = { workspace = true }
k256                  = { workspace = true }
city_mono           = { path = "../city_mono" }
city_common            = { path = "../city_common" }
serde_json            = { workspace = true }
shadow-rs             = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
