[package]
edition = "2021"
name    = "city_common"
version = "0.1.0"


[dependencies]
serde             = { workspace = true }
serde_json        = { workspace = true }
serde_with        = { workspace = true }
clap              = { workspace = true }
hex               = { workspace = true }
rand              = { workspace = true }
ff                = { workspace = true }
lazy_static       = { workspace = true }
anyhow            = { workspace = true }
plonky2           = { workspace = true }
num               = { workspace = true }
plonky2x          = { workspace = true }
starkyx           = { workspace = true }
