[package]
edition = "2021"
name    = "city_common"
version = "0.1.0"


[dependencies]
anyhow            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
serde_with        = { workspace = true }
clap              = { workspace = true }
hex               = { workspace = true }
rand              = { workspace = true }
lazy_static       = { workspace = true }
tokio             = { workspace = true }
