[package]
edition = "2021"
name    = "city_common_circuit"
version = "0.1.0"


[dependencies]
plonky2 = { workspace = true }
anyhow = { workspace = true }
num = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
starkyx = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hashbrown = { workspace = true }
rayon = { workspace = true }
city_crypto           = { path = "../city_crypto" }
city_common           = { path = "../city_common" }
city_rollup_common = { path = "../city_rollup_common" }
async-trait = { workspace = true }
kvq = { path = "../kvq" }

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"
