[package]
edition = "2021"
name    = "city_crypto"
version = "0.1.0"


[dependencies]
plonky2 = { workspace = true }
plonky2_maybe_rayon = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
num = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
k256 = { workspace = true }
kvq = { path = "../kvq" }