[package]
build   = "build.rs"
edition = "2021"
name    = "city-rollup-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

plonky2 = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
rand = { workspace = true }
city_crypto           = { path = "../city_crypto" }
city_common_circuit   = { path = "../city_common_circuit" }
city_common           = { path = "../city_common" }
city_rollup_common    = { path = "../city_rollup_common" }
bitcoincore-rpc       = { workspace = true }
clap                  = { workspace = true }
dotenv                = { workspace = true }
hex                   = { workspace = true }
k256                  = { workspace = true }
shadow-rs             = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
