[package]
build   = "build.rs"
edition = "2021"
name    = "city-rollup-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
city_common           = { path = "../city_common" }
city_rollup_core_node    = { path = "../city_rollup_core_node" }
city_rollup_core_worker    = { path = "../city_rollup_core_worker" }
city_rollup_core_orchestrator    = { path = "../city_rollup_core_orchestrator" }
clap                  = { workspace = true }
dotenv                = { workspace = true }
shadow-rs             = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
