[package]
edition = "2021"
name    = "city_rollup_common"
version = "0.1.0"


[dependencies]
plonky2 = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
city_crypto           = { path = "../city_crypto" }
city_common           = { path = "../city_common" }
kvq           = { path = "../kvq" }
async-trait = { workspace = true }
serde_repr = { workspace = true }
bincode = { workspace = true }
r2d2 = { workspace = true }
r2d2_redis = { workspace = true }
redis = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"
