[package]
name = "city_rollup_core_api"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
redb = { workspace = true }
kvq_store_redb = { path = "../kvq_store_redb" }
city_store = { path = "../city_store" }
city_common = { path = "../city_common" }
city_rollup_common = { path = "../city_rollup_common" }
city_macros = { path = "../city_macros" }
city_crypto = { path = "../city_crypto" }
hex = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
bincode = { workspace = true }
