[package]
edition = "2021"
name    = "city_rollup_core_worker"
version = "0.1.0"


[dependencies]
plonky2 = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
city_store = {path = "../city_store" }
city_common_circuit   = { path = "../city_common_circuit" }
city_rollup_circuit   = { path = "../city_rollup_circuit" }
city_rollup_worker_dispatch = { path = "../city_rollup_worker_dispatch" }
city_common           = { path = "../city_common" }
city_rollup_common    = { path = "../city_rollup_common" }
city_macros = {path = "../city_macros"}
r2d2 = { workspace = true }
r2d2_redis = { workspace = true }
bincode = {workspace = true}
redis = {workspace = true}
tokio = {workspace = true}

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"
