[package]
edition = "2021"
name    = "city_rollup_core_worker"
version = "0.1.0"


[dependencies]
plonky2 = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
bitcoin = { workspace = true }
reqwest = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
k256 = { workspace = true }
city_crypto           = { path = "../city_crypto" }
city_common_circuit   = { path = "../city_common_circuit" }
city_common           = { path = "../city_common" }
city_rollup_common    = { path = "../city_rollup_common" }
tokio                 = { workspace = true }
city_macros = { path = "../city_macros" }
city_redis_store = { path = "../city_redis_store" }
city_rollup_circuit = { path = "../city_rollup_circuit" }
city_rollup_worker_dispatch = { path = "../city_rollup_worker_dispatch" }
city_store = { path = "../city_store" }
gnark-plonky2-wrapper = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"
