[package]
build   = "build.rs"
edition = "2021"
name    = "city-rollup-dev-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

plonky2 = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
kvq           = { path = "../kvq" }
city_store           = { path = "../city_store" }
city_crypto           = { path = "../city_crypto" }
city_common_circuit   = { path = "../city_common_circuit" }
city_rollup_circuit   = { path = "../city_rollup_circuit" }
city_common           = { path = "../city_common" }
city_rollup_common    = { path = "../city_rollup_common" }
clap                  = { workspace = true }
dotenv                = { workspace = true }
shadow-rs             = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
