[package]
build   = "build.rs"
edition = "2021"
name    = "city-rollup-dev-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

plonky2 = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
rand = { workspace = true }
gnark-plonky2-wrapper = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }

hex-literal = "0.4.1"
kvq           = { path = "../kvq" }
city_store           = { path = "../city_store" }
city_crypto           = { path = "../city_crypto" }
city_redis_store      = { path = "../city_redis_store" }
city_common_circuit   = { path = "../city_common_circuit" }
city_rollup_circuit   = { path = "../city_rollup_circuit" }
city_common           = { path = "../city_common" }
city_rollup_common    = { path = "../city_rollup_common" }
city_rollup_core_node    = { path = "../city_rollup_core_node" }
city_rollup_core_worker    = { path = "../city_rollup_core_worker" }
city_rollup_worker_dispatch    = { path = "../city_rollup_worker_dispatch" }
city_rollup_core_orchestrator    = { path = "../city_rollup_core_orchestrator" }
city_rollup_rpc_provider = {path = "../city_rollup_rpc_provider"}
bitcoincore-rpc       = { workspace = true }
clap                  = { workspace = true }
dotenv                = { workspace = true }
hex                   = { workspace = true }
k256                  = { workspace = true }
shadow-rs             = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
redb = { workspace = true }

reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
bytes = "1"
http-body-util = "0.1"
hyper = "1.4"
hyper-tls = "0.6"
hyper-util = "0.1"
rlt = "0.1" 
jemallocator = "0.5"
redis = "0.25.0"
once_cell = "1.19.0"
core_affinity = "0.8"
time = "0.3.36"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
shadow-rs = { workspace = true }
