[package]
name = "city_rollup_rpc_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
async-trait = { workspace = true }
city_rollup_core_api = { path = "../city_rollup_core_api" }
city_common = { path = "../city_common" }
city_crypto = { path = "../city_crypto" }
city_rollup_common = { path = "../city_rollup_common" }
city_rollup_core_node = { path = "../city_rollup_core_node" }
anyhow = { workspace = true }
city_store = { path = "../city_store" }
plonky2 = { workspace = true }
serde_json = { workspace = true }
city_macros = { path = "../city_macros" }
lazy_static = { workspace = true }
