[package]
build   = "build.rs"
edition = "2021"
name    = "city-rollup-user-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

plonky2 = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
city_crypto           = { path = "../city_crypto" }
city_common_circuit   = { path = "../city_common_circuit" }
city_rollup_circuit   = { path = "../city_rollup_circuit" }
city_common           = { path = "../city_common" }
city_rollup_user_prover_api           = { path = "../city_rollup_user_prover_api" }
city_rollup_common    = { path = "../city_rollup_common" }
city_rollup_core_node    = { path = "../city_rollup_core_node" }
city_rollup_core_orchestrator = { path = "../city_rollup_core_orchestrator" }
bitcoincore-rpc       = { workspace = true }
clap                  = { workspace = true }
dotenv                = { workspace = true }
hex                   = { workspace = true }
k256                  = { workspace = true }
shadow-rs             = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
reqwest = { workspace = true }
kvq           = { path = "../kvq" }
city_store           = { path = "../city_store" }
city_rollup_rpc_provider = { path = "../city_rollup_rpc_provider" }

repl-rs = "0.2.8"
[build-dependencies]
shadow-rs = { workspace = true }
