[package]
edition = "2021"
name    = "city_store"
version = "0.1.0"


[dependencies]
plonky2 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
kvq           = { path = "../kvq" }
city_common           = { path = "../city_common" }
city_rollup_common           = { path = "../city_rollup_common" }
city_crypto           = { path = "../city_crypto" }

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"
