[package]
edition = "2021"
name    = "city_store"
version = "0.1.0"


[dependencies]
plonky2 = { workspace = true }
anyhow = { workspace = true }
num = { workspace = true }
unroll = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
kvq           = { path = "../kvq" }
city_common           = { path = "../city_common" }
city_rollup_common           = { path = "../city_rollup_common" }
kvq_store_redb            = { path = "../kvq_store_redb" }
city_crypto           = { path = "../city_crypto" }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"
